--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,7 @@
 name: Beautiful Jekyll CI
-on: [push, pull_request]:
-  paths-ignore:
+on: 
+  push:
+    paths-ignore:
       - '.github/**'
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
