--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@ author: info@rensselaer-repair.cafe
 
 navbar-links:
   Resources:
-    - Beautiful Jekyll: "https://beautifuljekyll.com"
-    - Learn markdown: "https://www.markdowntutorial.com/"
+    - Fix-it Carts: "#carts"
+    - Lessons: "#lessons"
 
 ################
 # --- Logo --- #
