--- a/_config.yml
+++ b/_config.yml
@@ -253,6 +253,8 @@ date_format: "%B %-d, %Y"
 # --- You don't need to touch anything below here (but you can if you want) --- #
 #################################################################################
 
+baseurl: /fix-forward
+
 # Output options (more information on Jekyll's site)
 timezone: "America/NewYork"
 markdown: kramdown
