--- a/_config.yml
+++ b/_config.yml
@@ -153,8 +153,8 @@ footer-hover-col: "#0085A1"
 #mobile-theme-col: "#0085A1"
 
 # For any extra visual customization, you can include additional CSS files in every page on your site. List any custom CSS files here
-#site-css:
-#  - "/assets/css/custom-styles.css"
+site-css:
+  - "/assets/css/custom-styles.css"
 
 # If you have common JavaScript files that should be included in every page, list them here
 #site-js:
@@ -248,6 +248,8 @@ date_format: "%B %-d, %Y"
 
 # Facebook App ID
 #fb_app_id: ""
+
+full-width: true
 
 #################################################################################
 # --- You don't need to touch anything below here (but you can if you want) --- #
